# NLP2025

./: (2 mike.ipynb  .gitignore  1.ipynb  2.ipynb  PycharmProjects.lnk  README.md  more_models_mike.ipynb  pyproject.toml  setup.py
Evaluation/: evaluation.ipynb
Evaluation/tables/: plain_metrics.tex  reformed_texts.tex  sota_metrics.tex
MIke_test/: README.md  nlp_test.ipynb  pyproject.toml
ML/try1/: preprocessing.ipynb  rnn.ipynb  wait_k_rnn.ipynb
ML/try2/: download_trained_models.py  preprocessing.ipynb  rnn.ipynb  wait_k_rnn.ipynb
Masking/: greek-masking-nb.ipynb
Naive/: RuleBasedReconstruction.ipynb
external_pipelines/: Transformer_Models.ipynb
