[project]
name = "nlp2025"
version = "0.1.0"
description = "Environment for the assignment of Natural Language Processing, 2025 @ Unipi"
authors = [
    {name = "Christos Lazaridis",email = "clazaridis7@gmail.com"}
]
license = {text = "Creative Common"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "transformers (>=4.30,<5.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "language-tool-python (>=2.9.3,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jiwer (>=3.1.0,<4.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "huggingface-hub (>=0.31.4,<0.32.0)",
    "peft (>=0.15.2,<0.16.0)",
    "gector @ git+https://github.com/gotutiyan/gector.git@main",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
