[project]
name = "nlp2025"
version = "0.1.0"
description = "venv for Natural Language Processing Course. Summer 2025 @ unipi"
authors = [
    {name = "Christos Lazaridis",email = "clazaridis7@gmail.com"}
]
license = {text = "creative common"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "language-tool-python (>=2.9.3,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "nlp2025" }]